--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -4,6 +4,9 @@
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
     
+    <br>
+    <br>
+    
     <% if (friendOption == 1){ %>
         <div class = "container mycontainer1">
             <div class = "row">
@@ -15,18 +18,11 @@
                         <br>
                         <div class = "scrollbox">
                             <div class = "scrollbox-inner">
-                                <% if (!userToFind.friends.length){%>
-                                    <div class="card card1">
-                                        <div class="card-body card-body2" style="text-align: center;">
-                                            No Friends Yet
-                                        </div>
-                                    </div>
-                                    
-                                <%}else{%>
+                                <% if (userToFind.friends.length){%>
                                     <% for (let friend of userToFind.friends){%>
                                         <a href="/profile/<%= friend._id %>">
-                                            <div class="card card1">
-                                                <div class="card-body card-body1" style="text-align: center;">
+                                            <div class="card card1" style = "height: 54px;">
+                                                <div class="card-body card-body1" style="text-align: center;padding: 0px;">
                                                     <%= friend.username %>
                                                 </div>
                                             </div>
@@ -65,18 +61,11 @@
                         <br>
                         <div class = "scrollbox">
                             <div class = "scrollbox-inner">
-                                <% if (!allFriendRequests.length){%>
-                                    <div class="card card1">
-                                        <div class="card-body card-body2" style="text-align: center;">
-                                            No Friends Requests
-                                        </div>
-                                    </div>
-                                    
-                                <%}else{%>
+                                <%if (allFriendRequests.length){%>
                                     <% for (let friendReq of allFriendRequests){%>
                                         <a href="/profile/<%= friendReq.requester._id %>">
-                                            <div class="card card1">
-                                                <div class="card-body card-body1" style="text-align: center;">
+                                            <div class="card card1" style = "height: 54px;">
+                                                <div class="card-body card-body1" style="text-align: center;padding: 0px;">
                                                     <%= friendReq.requester.username %>
                                                 </div>
                                             </div>
@@ -93,7 +82,7 @@
         </div>
     <%}else{%>
         <div class = "container mycontainer1">
-            <div class = "row" style = "margin-left: 200px;">
+            <div class = "row" style = "margin-left: 260px;">
                 <div class = "col-3" style = "padding: 0px;">
                     <div class = "sidebar" style = "border-top-right-radius: 0px;border-bottom-right-radius: 0px;">
                         <header class = "mt-3">
@@ -102,18 +91,11 @@
                         <br>
                         <div class = "scrollbox">
                             <div class = "scrollbox-inner">
-                                <% if (!userToFind.friends.length){%>
-                                    <div class="card card1">
-                                        <div class="card-body card-body2" style="text-align: center;">
-                                            No Friends Yet
-                                        </div>
-                                    </div>
-                                    
-                                <%}else{%>
+                                <% if (userToFind.friends.length){%>
                                     <% for (let friend of userToFind.friends){%>
                                         <a href="/profile/<%= friend._id %>">
-                                            <div class="card card1">
-                                                <div class="card-body card-body1" style="text-align: center;">
+                                            <div class="card card1" style = "height: 54px;">
+                                                <div class="card-body card-body1" style="text-align: center;padding: 0px;">
                                                     <%= friend.username %>
                                                 </div>
                                             </div>
@@ -151,7 +133,7 @@
                             </form>
                             
                         <% }else if(friendOption == 3){ %>
-                            <p>Friend request pending!</p>
+                            <p style="position:relative; top:200">Friend request pending!</p>
                         
                         <% }else if(friendOption == 4){ %>
                             <form action="/profile/acceptFriend/<%= userToFind._id %>" method = "POST">
@@ -170,20 +152,40 @@
         </div>
     <%}%>
 
+    <div class = "allposts" style = "display: flex;flex-direction: column;align-items: center;">
 
+        <% for(var i = 0;i<foodPostsByUser.length;i++){ %>
+            <div class="card sm-3" >
+                <div class="row">
+                    <div class="col-sm-4 align-self-center">
+                    
+                    <% if(foodPostsByUser[i].images.length){ %>
+                        <img class="img-fluid" alt="Responsive image" src="<%= foodPostsByUser[i].images[0].url %>">
+                    <%}else{%>
+                        <img class="img-fluid" alt="Responsive image" src="/photos/defaultImage.jpg">
+                    <%}%>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= foodPostsByUser[i].name%></h5>
+                            <p class="card-text"><i class='bx bx-user mr-2' ></i><a href="/profile/<%= foodPostsByUser[i].writer._id %>"><%= foodPostsByUser[i].writer.username %></a></p>
+                            <p class="card-text"><i class='bx bx-pin mr-2' ></i><%= foodPostsByUser[i].location %></p>
+                            <p class="card-text description"><strong><%= foodPostsByUser[i].description %></strong></p>
+                            <p hidden = true><%= foodPostsByUser[i].geometry.coordinates %></p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <a class="btn btn1" href="/foodposts/<%= foodPostsByUser[i]._id %>">View More</a>
 
+                
+            </div>
+            <br>
+            
 
+        <% }%>
 
-        
-        
-        <br>
-        <br>
-        <% for (let foodpost of foodPostsByUser){%>
-            <a href = "/foodposts/<%= foodpost._id %>"><%= foodpost.name %></a>
-            <p>At <%= foodpost.location %></p>
-        <%}%>
-
-    
+    </div>
     
     
     
