--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -189,7 +189,7 @@
     
     
     
-    
+    <script src="/jsfiles/cardDescriptionLimit.js"></script>
     <link rel="stylesheet" href="/cssfiles/profilePage.css">
 </body>
 </html>
