changed constraints for input values

--- a/views/newfoodpost.ejs
+++ b/views/newfoodpost.ejs
@@ -14,7 +14,7 @@
               </div>
       
               <div class="input-field">
-                  <input type="text" class="input2" name = "foodpost[name]" placeholder="Name" required>
+                  <input type="text" class="input2" name = "foodpost[name]" placeholder="Name" maxlength="50" required>
                   <i class='bx bx-user' ></i>
               </div>
 
@@ -24,7 +24,7 @@
               </div>
 
               <div class="input-field">
-                <input type="text" class="input2" name = "foodpost[location]" placeholder="Location" required>
+                <input type="text" class="input2" name = "foodpost[location]" placeholder="Location" maxlength="50" required>
                 <i class='bx bx-pin ' ></i>
               </div>
 
@@ -32,7 +32,7 @@
 
             
             <div class="input-field">
-              <textarea class = "input3" cols="50" rows="10" name = "foodpost[description]" placeholder="Description"></textarea>
+              <textarea class = "input3" cols="50" rows="10" name = "foodpost[description]" placeholder="Description" maxlength="300" required></textarea>
               <i class='bx bx-text' id = "descriptionItag"></i>
             </div>
 
