--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,17 +14,17 @@
                 </div>
         
                 <div class="input-field">
-                    <input type="email" class="input" placeholder="Email" name="email" required>
+                    <input type="email" class="input" placeholder="Email" name="email" minlength = "3" required>
                     <i class='bx bx-envelope bx-burst'></i>
                 </div>
 
                 <div class="input-field">
-                    <input type="text" class="input" placeholder="Username" name = "username" maxlength="20" required>
+                    <input type="text" class="input" placeholder="Username" name = "username" maxlength="20" minlength = "3" required>
                     <i class='bx bx-user bx-burst' ></i>
                 </div>
         
                 <div class="input-field">
-                    <input type="Password" class="input" placeholder="Password" name="password" maxlength="20" required>
+                    <input type="Password" class="input" placeholder="Password" name="password" maxlength="20" minlength = "3" required>
                     <i class='bx bx-lock-alt bx-burst'></i>
                 </div>
 
