--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,12 +13,12 @@
                 </div>
         
                 <div class="input-field">
-                    <input type="text" class="input" placeholder="Username" name = "username" maxlength="20" required>
+                    <input type="text" class="input" placeholder="Username" name = "username" maxlength="20" minlength = "3" required>
                     <i class='bx bx-user bx-burst' ></i>
                 </div>
 
                 <div class="input-field">
-                    <input type="Password" class="input" placeholder="Password" name="password" maxlength="20" required>
+                    <input type="Password" class="input" placeholder="Password" name="password" maxlength="20" minlength = "3" required>
                     <i class='bx bx-lock-alt bx-burst'></i>
                 </div>
 
