changed scrollbars :) and maxlength

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,7 +17,7 @@
                 <div class = "col-10 mycont">
                     <div class="input-wrapper">
                         <i class='bx bx-x bx-md clear-icon' ></i>
-                        <input class = "searchBar" type="text" placeholder="Search" name = "search" required>
+                        <input class = "searchBar" type="text" placeholder="Search" name = "search" maxlength="20" required>
                         <button type="submit" class = "search-button"><i class='bx bx-search bx-md '></i></button>
                     </div>
                 </div>
