--- a/public/cssfiles/navbar.css
+++ b/public/cssfiles/navbar.css
@@ -63,3 +63,12 @@ nav ul li a:hover{
     background: black;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+    border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb{
+    background: white;
+}
