--- a/public/cssfiles/show.css
+++ b/public/cssfiles/show.css
@@ -1,7 +1,5 @@
 body{
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url("/photos/dimsum.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: grey;
 }
 
 #map { 
