--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,18 @@
 <%- include('./partials/header')%>
 <body class = "d-flex flex-column vh-100">
-    <%- include('./partials/preloader')%>
+    <div id = "preloader"></div>
+    <link rel="stylesheet" href="/cssfiles/preloader.css">
+    
+    <script>
+    
+        var loader = document.getElementById("preloader");
+        window.addEventListener("load",function(){
+            setTimeout(function() {
+                loader.style.display = "none";
+            }, 3000)
+            
+        })
+    </script>
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
 =
